# network-messenger

./: .gitignore  CMakeLists.txt  Makefile  client.cpp  database.db  initialize_database.sql
src/: client.cpp  server.cpp
